--- a/Festival/war/Festival.css
+++ b/Festival/war/Festival.css
@@ -36,7 +36,7 @@
   padding: 6px 10px 0px 0px;
 }
 .Application-options .gwt-ListBox {
-  width: 150px;
+  /*width: 150px;*/
   font-size: 11px;
   color: blue;
   margin-left: 4px;
@@ -161,6 +161,7 @@
 .cw-RichText {
   border: 1px solid #BBBBBB;
   border-spacing: 0px;
+  width: 100%;
 }
 
 .cw-StackPanelHeader {
