added photo comp to menus

--- a/FestivalV2/war/greenpage.css
+++ b/FestivalV2/war/greenpage.css
@@ -1,5 +1,5 @@
 div#banner {
-	background-image: url(images/banner-yellow-bevel.jpg);
+	background-image: url(images/banner.jpg);
 	height: 180px;
 }
 
